[gd_scene load_steps=10 format=3 uid="uid://h8u7bc7iniob"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_a2ujk"]
[ext_resource type="Script" path="res://Player/SmoothCameraArm.gd" id="2_fti2y"]
[ext_resource type="PackedScene" uid="uid://heag0q14bpcw" path="res://Components/health_component.tscn" id="2_pgvfr"]
[ext_resource type="PackedScene" uid="uid://dpbufb0ws3mkg" path="res://Player/dash.tscn" id="3_1ld0o"]
[ext_resource type="PackedScene" uid="uid://dll3md5b5ql3s" path="res://Player/rig.tscn" id="3_e5684"]
[ext_resource type="Script" path="res://Player/AttackCast.gd" id="4_x0epg"]
[ext_resource type="PackedScene" uid="uid://dyi76ppuxawf8" path="res://Player/area_attack.tscn" id="6_a4ifm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_r2qib"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_hgwvm"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 5
script = ExtResource("1_a2ujk")

[node name="HealthComponent" parent="." instance=ExtResource("2_pgvfr")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_r2qib")

[node name="SmoothCameraArm" type="SpringArm3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_hgwvm")
spring_length = 4.0
script = ExtResource("2_fti2y")
target = NodePath("../HorizontalPivot/VerticalPivot")

[node name="Camera3D" type="Camera3D" parent="SmoothCameraArm"]

[node name="HorizontalPivot" type="Node3D" parent="."]

[node name="VerticalPivot" type="Node3D" parent="HorizontalPivot"]

[node name="RigPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="Rig" parent="RigPivot" instance=ExtResource("3_e5684")]

[node name="Skeleton3D" parent="RigPivot/Rig/CharacterRig/GameRig" index="0"]
bones/0/position = Vector3(1.42044e-14, 0.904187, -0.0481735)
bones/2/rotation = Quaternion(0.00274399, -0.000341758, 0.00321297, 0.999991)
bones/3/rotation = Quaternion(-0.0923205, -0.000325843, 0.00852269, 0.995693)
bones/4/rotation = Quaternion(0.273317, 1.512e-08, 9.05845e-08, 0.961924)
bones/6/rotation = Quaternion(-0.160897, -1.17067e-07, -2.27918e-08, 0.986971)
bones/7/position = Vector3(-5.64041e-08, 0.904187, -0.0481735)
bones/8/position = Vector3(-5.74755e-08, 0.904187, -0.0481735)
bones/9/position = Vector3(0.131144, 0.970391, -0.0351291)
bones/9/rotation = Quaternion(0.99367, 0.0205476, -0.0311035, 0.105976)
bones/11/rotation = Quaternion(0.407536, -0.000698504, 0.000311863, 0.913189)
bones/13/rotation = Quaternion(-0.746129, 0.0118653, 0.0243806, 0.665249)
bones/15/position = Vector3(-0.131144, 0.970391, -0.0351291)
bones/15/rotation = Quaternion(0.974545, -0.00552553, 0.0275004, 0.222428)
bones/17/rotation = Quaternion(0.432554, 0.00322242, -0.00154609, 0.901601)
bones/19/rotation = Quaternion(-0.683078, -0.0281654, -0.00109881, 0.729802)
bones/21/position = Vector3(0.0251286, 1.43404, 0.0450071)
bones/21/rotation = Quaternion(-0.480778, -0.263147, -0.409198, 0.729495)
bones/22/position = Vector3(0.190162, 1.47207, -0.0162961)
bones/22/rotation = Quaternion(0.0343205, -0.162062, 0.975112, -0.147356)
bones/23/rotation = Quaternion(1.23488e-07, -0.0286057, 1.93683e-08, 0.999591)
bones/24/rotation = Quaternion(0.327838, -0.0286075, -0.0203922, 0.94408)
bones/46/position = Vector3(-0.0113635, 1.43404, 0.0450071)
bones/46/rotation = Quaternion(-0.489634, 0.2443, 0.396632, 0.737062)
bones/47/position = Vector3(-0.173007, 1.47256, -0.0244763)
bones/47/rotation = Quaternion(-0.0407194, -0.142735, 0.975263, 0.163799)
bones/48/rotation = Quaternion(-3.84916e-08, 0.036993, -1.49262e-07, 0.999316)
bones/49/rotation = Quaternion(0.365016, 0.0369934, 0.0287854, 0.929821)
bones/71/position = Vector3(0.127191, 1.35386, -0.0253312)
bones/71/rotation = Quaternion(1.98526e-08, 0.605104, 0.796146, -4.61174e-08)
bones/72/position = Vector3(-0.113426, 1.35386, -0.0253313)
bones/72/rotation = Quaternion(1.9851e-08, 0.605128, 0.796128, -4.61181e-08)

[node name="RightHandBone" parent="RigPivot/Rig" index="2"]
transform = Transform3D(-0.962344, -0.270796, -0.0237212, 0.230789, -0.860032, 0.455063, -0.14363, 0.432452, 0.890143, -0.346823, 0.998658, 0.00298238)

[node name="LeftHandBone" parent="RigPivot/Rig" index="3"]
transform = Transform3D(-0.970514, 0.239104, 0.0305262, -0.214973, -0.915858, 0.339103, 0.109039, 0.322542, 0.940254, 0.346972, 0.983642, -0.0259414)

[node name="RayAttachment" type="BoneAttachment3D" parent="RigPivot/Rig"]
transform = Transform3D(-0.962344, -0.270796, -0.0237212, 0.230789, -0.860032, 0.455063, -0.14363, 0.432452, 0.890143, -0.346823, 0.998658, 0.00298238)
bone_name = "DEF-hand.R"
bone_idx = 51
use_external_skeleton = true
external_skeleton = NodePath("../CharacterRig/GameRig/Skeleton3D")

[node name="AttackCast" type="RayCast3D" parent="RigPivot/Rig/RayAttachment"]
unique_name_in_owner = true
transform = Transform3D(-3.8097e-09, 4.35451e-08, 1, 0.996196, 0.0871558, -4.42399e-16, -0.0871559, 0.996195, -4.37115e-08, -0.03, 0.075, -0.05)
target_position = Vector3(0, 1, 0)
collision_mask = 8
script = ExtResource("4_x0epg")

[node name="AreaAttack" parent="RigPivot" instance=ExtResource("6_a4ifm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)
collision_mask = 8

[node name="Dash" parent="RigPivot" node_paths=PackedStringArray("player") instance=ExtResource("3_1ld0o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.142484, 0)
player = NodePath("../..")

[connection signal="defeat" from="HealthComponent" to="." method="_on_health_component_defeat"]
[connection signal="heavy_attack" from="RigPivot/Rig" to="." method="_on_rig_heavy_attack"]

[editable path="RigPivot/Rig"]
[editable path="RigPivot/Rig/CharacterRig"]
